2008-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scale_trough):
	Use shade[2] taken from parentbg to draw the scale trough

2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/support.c: (clearlooks_get_parent_bg):
	Got the notebook check a bit wrong earlier.

2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_inset):
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_inset),
	(clearlooks_glossy_draw_light_inset):
	* engines/crux/src/crux-draw.c: (paint_shadow), (draw_shadow),
	(draw_box), (draw_extension):
	Fix compiling with --enable-paranoia. Included here is the patch
	from Jens Granseuer for bug #521679.

2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/thinice/src/thinice_rc_style.h:
	mark_type2 and paned_dots used the same bit (also fixes compiling
	with --enable-paranoia)

2008-03-13  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/support.c: (clearlooks_get_parent_bg):
	Only use the notebooks background if it draws a border.

2008-03-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* README:
	* configure.ac:
	Update for the 2.14.0 stable release.

2008-03-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/crux/src/crux-draw.c: (draw_box):
	Fix a memory leak in the new spinbutton handling code.

2008-03-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/crux/src/crux-draw.c: (draw_box):
	Fix a regression:
	crux would access widget to check the focused state even if widget
	is NULL. This could potentially crash applications.

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_box_gap), (draw_extension): Add
	bevel to notebooks

2008-03-03  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (draw_shadow_gap), (draw_box_gap):